codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_runs_while_exec_active_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"exec running:\\n{exec_running}\\nexec and hook running:\\n{exec_and_hook_running}\\nhistory after exec:\\n{history_after_exec}\\nhook running after exec:\\n{hook_running_after_exec}\\nquiet hook completed:\\n{quiet_hook_completed}\")"
---
exec running:
• Running 1 command
  └ echo done

exec and hook running:
"                                                                                "
"• Running 1 command                                                             "
"  └ echo done                                                                   "
"                                                                                "
"✦ Working · checking output policy                            0s · Esc interrupt"
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"┃ ›                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                          "
history after exec:
• Ran 1 command
  └ echo done

hook running after exec:
"                                                                                "
"✦ Working · checking output policy                            0s · Esc interrupt"
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"┃ ›                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                          "
quiet hook completed:
"                                                                                "
"✦ Working                                                     0s · Esc interrupt"
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"┃ ›                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  GPT 5.6 Sol · Default · /tmp/project                                          "
