codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_generation_call_history_snapshot.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Generated image:
  └ A tiny blue square
  └ Saved to: file:///tmp/ig-1.png
